--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="me.jpeg" alt="Your Photo" class="profile-image">
                 <div class="description"> 
                     <p>I am Joaquin Jairo S. Abril, a student at Metaverse Age Training Institute currently taking Creative Computing as my course.</p>
-                    <p>In this portfolio website you will see a glimpse of some of the artworks I made. From videos to graphic designing I am improving my skilset to help go down the digital path</p>
+                    <p>In this portfolio website you will see a glimpse of some of the artworks I made. From videos to graphic designing I am improving my skillset to help go down the digital path</p>
                 </div>
             </div>
             </blockquote>
